# YandexPracticum4

./: CMakeLists.txt  main.cpp
include/: analyse.hpp  file.hpp  function.hpp  metric.hpp  metric_accumulator.hpp  utils.hpp
include/metric_accumulator_impl/: average_accumulator.hpp  categorical_accumulator.hpp  sum_average_accumulator.hpp
include/metric_impl/: code_lines_count.hpp  cyclomatic_complexity.hpp  metrics.hpp  naming_style.hpp  parameters_count.hpp
src/: CMakeLists.txt  file.cpp  function.cpp  metric.cpp  metric_accumulator.cpp
src/metric_accumulator_impl/: CMakeLists.txt  average_accumulator.cpp  categorical_accumulator.cpp  sum_average_accumulator.cpp
src/metric_accumulator_impl/tests/: average_accumulator.cpp
src/metric_impl/: CMakeLists.txt  code_lines_count.cpp  cyclomatic_complexity.cpp  naming_style.cpp
src/metric_impl/tests/: code_lines_count.cpp  cyclomatic_complexity.cpp  files_test_data.cpp  files_test_data.hpp  naming_style.cpp  parameters_count.cpp
